Add comments to spatiotemporal data notebook

--- a/Unit05-Spatiotemporal-Data/05.1 Spatiotemporal Data 1 - Navigating NetCDF files.ipynb
+++ b/Unit05-Spatiotemporal-Data/05.1 Spatiotemporal Data 1 - Navigating NetCDF files.ipynb
@@ -9,7 +9,18 @@
     "\n",
     "In this notebook, we explore the contents of a single NetCDF file. The file contains output from one year of a 30-year simulation of historical climate in southwestern Idaho, over a domain that contains the entirety of the Boise River Basin (Upper and Lower). \n",
     "\n",
-    "The purpose of this notebook is to build a mental model of the hierarchical organization of NetCDF files – to develop an understanding of how 'Dimensions', 'Coordinates', and 'Data variables' relate to one another. The key takeaway of this notebook is to understand that NetCDF is a powerful file format for organizing data (be it from models or observations) that varies in at least one dimension. In this case, we will be dealing with three dimensional data that varies in two dimensions of space (east-west and south-north, or longitude and latitude) and one in time. "
+    "The purpose of this notebook is to build a working conceptual model of the hierarchical organization of NetCDF files – to develop an understanding of how 'Dimensions', 'Coordinates', and 'Data variables' relate to one another. The key takeaway of this notebook is to understand that NetCDF is a powerful file format for organizing data (be it from models or observations) that vary in at least one dimension. In this case, we will be dealing with three dimensional data that varies in two dimensions of space (east-west and south-north, or longitude and latitude) and one in time. \n",
+    "\n",
+    "The data we'll be working with is from simulations using the [Weather Research and Forecasting (WRF) model](https://www.mmm.ucar.edu/models/wrf) that were done in my lab. WRF is a powerful model to simulate coupled land-atmosphere dynamics for weather forecasting, climate downscaling, and other research and practical applications. WRF is, for example, the backbone of the NOAA High Resolution Rapid Refresh (HRRR) model that many of you may know. Our research group carried out a 30-year simulation of historical climate over southwest Idaho, providing us a spatiotemporally complete estimate of weather and climate conditions at a spatial resolution of 1 km and a temporal resolution of 1 hr. The outputs of the WRF model are copious, and so we developed subsets of this simulation to support a variety of applications. The subset we will be working with today is daily surface hydrometeorlogical conditions (precipitation, temperature, humidity, and solar radiation) for water year 2017, the so-called \"Snowmageddon\" year. \n",
+    "\n",
+    "Throughout this unit we'll be using the `xarray` library, an insanely helpful library for dealing with data that is stored as NetCDF files. We will use `xarray` to open two files – the daily climate data for water year 2017 and some geographic variables for the modeling domain – and perform a couple of analyses, from which we will create some plots. The primary things we want to learn from the notebook today is:\n",
+    "\n",
+    "- How to use `xarray` to open a single NetCDF file,\n",
+    "- How to explore the contents of that NetCDF file using `xarray`,\n",
+    "- How to retrieve data from the NetCDF file, and\n",
+    "- How to access the spatial and temporal elements of the data.\n",
+    "\n",
+    "### 1. Imports and Definitions"
    ]
   },
   {
@@ -23,11 +34,22 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "# Latitude and longitude of Mores Creek Summit Snotel site obtained from the NRCS Snotel site info\n",
     "mc_lat = 43 + 56/60 # Mores Creek Summit Snotel latitude\n",
     "mc_lon = -(115 + 40/60) # Mores Creek Summit Snotel longitude\n",
     "\n",
     "wrf_geofile = '../data/wrf_geoinfo.nc' # WRF geographic info file\n",
     "wrf_ncfile = '../data/WRF-NARR-1km-WY2017.nc' # WRF output NetCDF file of daily data for WY2017\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8ce77e5",
+   "metadata": {},
+   "source": [
+    "### 2. Open and Explore the NetCDF Files\n",
+    "\n",
+    "Opening a single NetCDF file using `xarray` is straightforward enough. The library \"loads\" the content of the file into an `xarray DataSet`. Ordinarily, we append `ds` to the name of the variable to denote that it's a dataset `xarray DataSet`. We can then have Python report to use what the contents of the dataset are. Let's open the file with the climate data first. "
    ]
   },
   {
@@ -457,6 +479,14 @@
    "source": [
     "wrf_ds = xr.open_dataset(wrf_ncfile) # Open the WRF NetCDF file\n",
     "wrf_ds # Display the dataset information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6703aff5",
+   "metadata": {},
+   "source": [
+    "Now let's open the file containing the geographic information."
    ]
   },
   {
@@ -897,6 +927,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "234aa3dc",
+   "metadata": {},
+   "source": [
+    "### 3. Get the Index Closest to the Mores Creek Snotel Site"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "83251e57",
@@ -929,6 +967,14 @@
     "print(f\"Grid Latitude: {wrf_geods['XLAT'][0,row, col]:.4f}\")\n",
     "print(f\"Grid Longitude: {wrf_geods['XLONG'][0,row, col]:.4f}\")\n",
     "print(f\"Distance: {distance[row, col]:.4f} degrees\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cb91a9f",
+   "metadata": {},
+   "source": [
+    "### 4. Get Point-scale Time Series Data"
    ]
   },
   {
@@ -985,6 +1031,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49d5e20e",
+   "metadata": {},
+   "source": [
+    "### 5. Get the Annual Total Precipitation and Plot "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "id": "0201ce79",
@@ -1016,6 +1070,14 @@
     "plt.xlabel('Longitude')\n",
     "plt.ylabel('Latitude')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "915562a5",
+   "metadata": {},
+   "source": [
+    "What does the spatial distribution of precipitation look like? Does it conform to our expectation that precipitation goes with topography?"
    ]
   },
   {
@@ -1057,7 +1119,7 @@
    "source": [
     "### Challenge: Plot Other Variables\n",
     "\n",
-    "\n",
+    "Try one or more of these next steps:\n",
     "\n",
     "* Spatial distribution of average mean daily temperature (easy)\n",
     "* Spatial distribution of average daily temperature range (intermediate)\n",
